2005-11-14  Mark Wielaard  <mark@klomp.org>

	As suggested by Joao Victor <jvital@gmail.com>:
	* javax/swing/Timer.java (Waker): Removed class.
	(Task): New class.
	(timer): New field.
	(running): Removed field.
	(waker): Likewise.
	(task): New field.
	(isRunning): Check whether task is null.
	(start): Create task and schedule it with timer.
	(stop): Cancel task and clear field.
	(queueEvent): Synchronized on queueLock.

2005-11-14  Lillian Angel  <langel@redhat.com>

	* javax/swing/JTree.java
	(expandPath): No need to get the parent path.
	* javax/swing/event/TreeModelEvent.java:
	Variables should be initialized to null.
	(toString): Implemented.
	* javax/swing/plaf/basic/BasicTreeUI.java
	(treeStructureChanged): Implemented.
	(getParent): Added check to avoid infinite loop.
	(findNode): Fixed check to use getChild, instead of
	getIndexOfChild.
	(updateCurrentVisiblePath): Added a loop to check
	the parent's sibling, if the current node has no
	other siblings.

2005-11-14  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/ActionMap.java: 
	(keys): Return null if the map is empty.
	(allKeys): Likewise.
	* javax/swing/InputMap.java:
	(keys): Return null if the map is empty.
	(allKeys): Likewise.
	* javax/swing/JMenuBar:
	(addNotify): Register the menu with the KeyboardManager.
	(processKeyBinding): New API method.
	(processKeyBindingHelper): New implementation method.
	* javax/swing/JMenuItem.java:
	(setAccelerator): Fire a PropertyChangeEvent after changing the 
	accelerator.
	* javax/swing/KeyboardManager.java:
	(menuBarLookup): New field, Hashtable mapping between top-level 
	containers and a Vector of the JMenuBars contained in them.
	(getHashtableForTopLevel): Changed this public method to package
	private.
	(registerEntireMap): Avoid NPE by returning early if the parameter
	is null or contains no mappings.
	(processKeyStroke): If the mapped component doesn't consume the event,
	let all JMenuBars in the top-level container have a chance at it.